--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
+        "twbs/bootstrap": "^5.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -45,7 +47,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "dev": "vite",
+        "build": "vite build"
     },
     "extra": {
         "laravel": {
