--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "dev": "vite",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^4.4.0",
         "axios": "^0.21",
+        "bootstrap": "^5.3.2",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "sass": "^1.56.1",
+        "vite": "^4.4.11"
+    },
+    "dependencies": {
+        "vue": "^3.3.4"
     }
 }
